--- a/Fecal_v_stomach_paired.Rmd
+++ b/Fecal_v_stomach_paired.Rmd
@@ -967,6 +967,8 @@ NC_Shark_prey_species_merge.ps_paired.1.PA <- phyloseq_standardize_otu_abundance
 top20occ = names(sort(taxa_sums(NC_Shark_prey_species_merge.ps_paired.1.PA), decreasing = TRUE)[1:20])
 NC_Shark_prey_species_merge.ps_paired.1.PA.Top20 = prune_taxa(top20occ, NC_Shark_prey_species_merge.ps_paired.1.PA)
 
+##### ATLANTIC SHARPNOSE #####
+
 #Now only by shark species (Atlantic sharpnose) - this is FOO
 NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20,Species..scientific.name.=="Rhizoprionodon terraenovae")
 
@@ -984,7 +986,6 @@ otu_df_long$sample <-gsub(pattern = ".",
                           fixed = TRUE)
 
 sample_df<-cbind(data.frame(sample_data(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose)))
-library(tidyverse)
 sample_df<-rownames_to_column(sample_df, var = "sample")
 sample_material_key<-sample_df%>%
   select(sample,material)
@@ -1012,15 +1013,22 @@ merge_material_counts<-merge_material_otu_counts%>%
   mutate(rel_prct=(total_count/total_material)*100)
 
 #plot 
-ggplot(merge_material_counts,fill="species")+
-  geom_bar(aes(x=material, y=rel_prct, color=species, fill=species), color="black",stat="identity", position="stack")+
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_plot <- ggplot(merge_material_counts,fill="species") +
+  geom_bar(aes(x=material, y=rel_prct, color=species, fill=species),stat="identity", position="stack")+
   ylab("Relative Percent of Occurrence by material type") + 
-  xlab("Atlantic sharpnose")
+  xlab("Atlantic sharpnose") +
+  theme_classic() + theme(text = element_text(size =11)) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  scale_fill_discrete(limits = c("Achelous gibbesii", "Achelous spinimanus", "Arenaeus cribrarius", "Callinectes sapidus", "Callinectes similis", "Clibanarius vittatus", "Hexapanopeus angustifrons", "Ovalipes ocellatus", "Penaeus setiferus", 
+  "Rimapenaeus constrictus", "Squilla empusa", "Cynoscion nothus", "Cynoscion regalis", "Lagodon rhomboides", "Leiostomus xanthurus", "Myrophis punctatus", "Pomatomus saltatrix", "Synodus foetens", "Trichiurus lepturus", "Xyrichtys novacula")) +
+  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
+  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
 
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_plot
 
+########################################################################################################################
 
-
-
+##### BONNETHEAD ######
 
 #Now only by shark species (Bonnethead) - this is FOO
 NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20,Species..scientific.name.=="Sphyrna tiburo")
@@ -1029,11 +1037,8 @@ NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead<-subset_samples(NC_S
 otu_df<-cbind(data.frame(otu_table(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead)))
 otu_df$otu<-rownames(otu_df)
 
-View(otu_df)
-
 otu_df_long<-otu_df%>%
   pivot_longer(cols = -otu,names_to = "sample",values_to = "presence")
-View(otu_df_long)
 
 otu_df_long$sample <-gsub(pattern = ".",
                           "-",
@@ -1041,12 +1046,10 @@ otu_df_long$sample <-gsub(pattern = ".",
                           fixed = TRUE)
 
 sample_df<-cbind(data.frame(sample_data(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead)))
-library(tidyverse)
 sample_df<-rownames_to_column(sample_df, var = "sample")
-View(sample_df)
+
 sample_material_key<-sample_df%>%
   select(sample,material)
-View(sample_material_key)
 
 taxa_df<-cbind(data.frame(tax_table(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead)))
 taxa_df<-rownames_to_column(taxa_df,var="otu")
@@ -1056,107 +1059,161 @@ otu_species_key<-taxa_df%>%
 otu_df_long<-otu_df_long%>%
   left_join(sample_material_key)%>%
   left_join(otu_species_key)
-View(otu_df_long)
+
 #group by different taxonomic levels (shark species)
 
 merge_material_otu_counts<-otu_df_long%>%
   group_by(material,species)%>%
   summarise(total_count=sum(presence))%>%
   ungroup()
-View(merge_material_otu_counts)
 
 merge_material_counts<-merge_material_otu_counts%>%
   group_by(material)%>%
   mutate(total_material=sum(total_count))%>%
   ungroup()%>%
   mutate(rel_prct=(total_count/total_material)*100)
-View(merge_material_counts)
 
 #plot 
-ggplot(merge_material_counts,fill="species")+
-  geom_bar(aes(x=material, y=rel_prct, color=species, fill=species), color="black",stat="identity", position="stack")+
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead_plot <- ggplot(merge_material_counts,fill="species")+
+  geom_bar(aes(x=material, y=rel_prct, color=species, fill=species), stat="identity", position="stack")+
   ylab("Relative Percent of Occurrence by material type") + 
-  xlab("Bonnethead")
-
-
-
-
-
-
-
-
-
-
-
-NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_plot<-plot_bar(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_POO,x="Species..scientific.name.", fill="species") + 
-  facet_grid(~material, scales="free", space = "free") +
-  geom_bar(aes(color=species, fill=species), stat="identity", position = position_stack()) +
-    theme_classic() + theme(text = element_text(size =11)) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  xlab("Bonnethead") + 
+  theme_classic() + theme(text = element_text(size =11)) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   scale_fill_discrete(limits = c("Achelous gibbesii", "Achelous spinimanus", "Arenaeus cribrarius", "Callinectes sapidus", "Callinectes similis", "Clibanarius vittatus", "Hexapanopeus angustifrons", "Ovalipes ocellatus", "Penaeus setiferus", 
   "Rimapenaeus constrictus", "Squilla empusa", "Cynoscion nothus", "Cynoscion regalis", "Lagodon rhomboides", "Leiostomus xanthurus", "Myrophis punctatus", "Pomatomus saltatrix", "Synodus foetens", "Trichiurus lepturus", "Xyrichtys novacula")) +
-  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
-  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
+  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
+  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
 
-NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_plot
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead_plot
 
 ########################################################################################################################
 
-#Now only by sshark species (Bonnethead)
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Bonnethead<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1_top20species,Species..scientific.name.=="Sphyrna tiburo")
+##### BLACKNOSE ######
 
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Bonnethead_plot<-plot_bar(NC_Shark_prey_species_merge.ps_paired.1_top20species.Bonnethead,x="Species..scientific.name.", fill="species") + 
-  facet_grid(~material, scales="free", space = "free") +
-  geom_bar(aes(color=species, fill=species), stat="identity", position = position_stack()) +
-    theme_classic() +
-  theme(text = element_text(size =11)) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+#Now only by shark species (Blacknose) - this is FOO
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacknose<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20,Species..scientific.name.=="Carcharhinus acronotus")
+
+#Put it into dataframes
+otu_df<-cbind(data.frame(otu_table(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacknose)))
+otu_df$otu<-rownames(otu_df)
+
+otu_df_long<-otu_df%>%
+  pivot_longer(cols = -otu,names_to = "sample",values_to = "presence")
+
+otu_df_long$sample <-gsub(pattern = ".",
+                          "-",
+                          x=otu_df_long$sample,
+                          fixed = TRUE)
+
+sample_df<-cbind(data.frame(sample_data(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacknose)))
+sample_df<-rownames_to_column(sample_df, var = "sample")
+
+sample_material_key<-sample_df%>%
+  select(sample,material)
+
+taxa_df<-cbind(data.frame(tax_table(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacknose)))
+taxa_df<-rownames_to_column(taxa_df,var="otu")
+otu_species_key<-taxa_df%>%
+  select(otu,family,genus,species)
+
+otu_df_long<-otu_df_long%>%
+  left_join(sample_material_key)%>%
+  left_join(otu_species_key)
+
+#group by different taxonomic levels (shark species)
+
+merge_material_otu_counts<-otu_df_long%>%
+  group_by(material,species)%>%
+  summarise(total_count=sum(presence))%>%
+  ungroup()
+
+merge_material_counts<-merge_material_otu_counts%>%
+  group_by(material)%>%
+  mutate(total_material=sum(total_count))%>%
+  ungroup()%>%
+  mutate(rel_prct=(total_count/total_material)*100)
+
+#plot 
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacknose_plot <- ggplot(merge_material_counts,fill="species")+
+  geom_bar(aes(x=material, y=rel_prct, color=species, fill=species), stat="identity", position="stack")+
+  ylab("Relative Percent of Occurrence by material type") + 
+  xlab("Blacknose") + 
+  theme_classic() + theme(text = element_text(size =11)) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   scale_fill_discrete(limits = c("Achelous gibbesii", "Achelous spinimanus", "Arenaeus cribrarius", "Callinectes sapidus", "Callinectes similis", "Clibanarius vittatus", "Hexapanopeus angustifrons", "Ovalipes ocellatus", "Penaeus setiferus", 
   "Rimapenaeus constrictus", "Squilla empusa", "Cynoscion nothus", "Cynoscion regalis", "Lagodon rhomboides", "Leiostomus xanthurus", "Myrophis punctatus", "Pomatomus saltatrix", "Synodus foetens", "Trichiurus lepturus", "Xyrichtys novacula")) +
-  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
-  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
+  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
+  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
 
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Bonnethead_plot
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacknose_plot
 
 ########################################################################################################################
 
-#Now only by sshark species (Blacknose)
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacknose<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1_top20species,Species..scientific.name.=="Carcharhinus acronotus")
+##### BLACKTIP ######
 
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacknose_plot<-plot_bar( NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacknose,x="Species..scientific.name.", fill="species") + 
-  facet_grid(~material, scales="free", space = "free") +
-  geom_bar(aes(color=species, fill=species), stat="identity", position = position_stack()) +
-    theme_classic() +
-  theme(text = element_text(size =11)) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+#Now only by shark species (Blacktip) - this is FOO
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacktip<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20,Species..scientific.name.=="Carcharhinus limbatus")
+
+#Put it into dataframes
+otu_df<-cbind(data.frame(otu_table(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacktip)))
+otu_df$otu<-rownames(otu_df)
+
+otu_df_long<-otu_df%>%
+  pivot_longer(cols = -otu,names_to = "sample",values_to = "presence")
+
+otu_df_long$sample <-gsub(pattern = ".",
+                          "-",
+                          x=otu_df_long$sample,
+                          fixed = TRUE)
+
+sample_df<-cbind(data.frame(sample_data(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacktip)))
+sample_df<-rownames_to_column(sample_df, var = "sample")
+
+sample_material_key<-sample_df%>%
+  select(sample,material)
+
+taxa_df<-cbind(data.frame(tax_table(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacktip)))
+taxa_df<-rownames_to_column(taxa_df,var="otu")
+otu_species_key<-taxa_df%>%
+  select(otu,family,genus,species)
+
+otu_df_long<-otu_df_long%>%
+  left_join(sample_material_key)%>%
+  left_join(otu_species_key)
+
+#group by different taxonomic levels (shark species)
+
+merge_material_otu_counts<-otu_df_long%>%
+  group_by(material,species)%>%
+  summarise(total_count=sum(presence))%>%
+  ungroup()
+
+merge_material_counts<-merge_material_otu_counts%>%
+  group_by(material)%>%
+  mutate(total_material=sum(total_count))%>%
+  ungroup()%>%
+  mutate(rel_prct=(total_count/total_material)*100)
+
+#plot 
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacktip_plot <- ggplot(merge_material_counts,fill="species")+
+  geom_bar(aes(x=material, y=rel_prct, color=species, fill=species), stat="identity", position="stack")+
+  ylab("Relative Percent of Occurrence by material type") + 
+  xlab("Blacktip") + 
+  theme_classic() + theme(text = element_text(size =11)) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   scale_fill_discrete(limits = c("Achelous gibbesii", "Achelous spinimanus", "Arenaeus cribrarius", "Callinectes sapidus", "Callinectes similis", "Clibanarius vittatus", "Hexapanopeus angustifrons", "Ovalipes ocellatus", "Penaeus setiferus", 
   "Rimapenaeus constrictus", "Squilla empusa", "Cynoscion nothus", "Cynoscion regalis", "Lagodon rhomboides", "Leiostomus xanthurus", "Myrophis punctatus", "Pomatomus saltatrix", "Synodus foetens", "Trichiurus lepturus", "Xyrichtys novacula")) +
-  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
-  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
+  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
+  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Hexapanopeus angustifrons"="palevioletred", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Pomatomus saltatrix"="slateblue1", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Symphurus plagiusa"="slategray2", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
 
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacknose_plot
+NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacktip_plot
 
-########################################################################################################################
-
-#Now only by shark species (Blacktip)
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacktip<-subset_samples(NC_Shark_prey_species_merge.ps_paired.1_top20species,Species..scientific.name.=="Carcharhinus limbatus")
-
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacktip_plot<-plot_bar(NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacktip,x="Species..scientific.name.", fill="species") + 
-  facet_grid(~material, scales="free", space = "free") +
-  geom_bar(aes(color=species, fill=species), stat="identity", position = position_stack()) +
-    theme_classic() +
-  theme(text = element_text(size =11)) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
-  scale_fill_discrete(limits = c("Achelous gibbesii", "Achelous spinimanus", "Arenaeus cribrarius", "Callinectes sapidus", "Callinectes similis", "Clibanarius vittatus", "Hexapanopeus angustifrons", "Ovalipes ocellatus", "Penaeus setiferus", 
-  "Rimapenaeus constrictus", "Squilla empusa", "Cynoscion nothus", "Cynoscion regalis", "Lagodon rhomboides", "Leiostomus xanthurus", "Myrophis punctatus", "Pomatomus saltatrix", "Synodus foetens", "Trichiurus lepturus", "Xyrichtys novacula")) +
-  scale_fill_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1")) +
-  scale_color_manual(values = c("Achelous gibbesii"="darkorange", "Achelous spinimanus"="darkorange4", "Arenaeus cribrarius"="darksalmon", "Callinectes sapidus"="goldenrod3", "Callinectes similis"="tomato", "Clibanarius vittatus"="gold", "Hexapanopeus angustifrons"="palevioletred", "Ovalipes ocellatus"="yellow", "Penaeus setiferus"="red", "Rimapenaeus constrictus"="violetred", "Squilla empusa"="hotpink1", "Cynoscion nothus"="aquamarine4", "Cynoscion regalis"="darkolivegreen", "Lagodon rhomboides"="lightseagreen", "Leiostomus xanthurus"="palegreen", "Myrophis punctatus"="royalblue", "Pomatomus saltatrix"="slateblue1", "Synodus foetens"="navyblue", "Trichiurus lepturus"="yellowgreen", "Xyrichtys novacula"="darkolivegreen1"))
-
-NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacktip_plot
+#########################################################################################
 
 #Plot all together
 library(gridExtra)
-grid.arrange(NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacktip_plot, NC_Shark_prey_species_merge.ps_paired.1_top20species.Blacknose_plot, NC_Shark_prey_species_merge.ps_paired.1_top20species.Bonnethead_plot, NC_Shark_prey_species_merge.ps_paired.1_top20species.AtlanticSharpnose_plot, ncol=2)
+grid.arrange(NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacktip_plot, NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Blacknose_plot, NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.Bonnethead_plot, NC_Shark_prey_species_merge.ps_paired.1.PA.Top20.AtlanticSharpnose_plot, ncol=2)
 ```
 
 ```{r}
@@ -1197,13 +1254,15 @@ pseq_paired %>%
 # Statistics for NMDS plot (prey at genus level)
 jsd_dist_matrix <- phyloseq::distance(pseq_paired, method ="jsd")
 set.seed(200)
-vegan::adonis2(jsd_dist_matrix ~ phyloseq::sample_data(pseq_paired)$material*pseq_paired@sam_data$Species..scientific.name.)
+permanova <- vegan::adonis2(jsd_dist_matrix ~ phyloseq::sample_data(pseq_paired)$material*pseq_paired@sam_data$Species..scientific.name.)
+permanova
+View(permanova)
 
 set.seed(200)
 pairwise.adonis(jsd_dist_matrix, phyloseq::sample_data(pseq_paired)$Species..scientific.name.)
 ```
 
-Rarefaction Curves
+Rarefaction Curves - with both species and genera
 ```{r}
 #(fecal vs stomach, Bonnetheads)
 
@@ -1241,11 +1300,11 @@ names(Rarefaction_Bonnethead_Stomach_Reverse)
 
 #Plot all samples together
 #Need to highlight both lines and run them together with command return
-sp1_Bonnethead <- specaccum(Rarefaction_Bonnethead_Fecal_Reverse, object="species", permutations = 100)
-sp2_Bonnethead <- specaccum(Rarefaction_Bonnethead_Stomach_Reverse, object="species", permutations = 100)
+sp1_Bonnethead <- specaccum(Rarefaction_Bonnethead_Fecal_Reverse, object="prey taxa", permutations = 100)
+sp2_Bonnethead <- specaccum(Rarefaction_Bonnethead_Stomach_Reverse, object="prey taxa", permutations = 100)
 
 #Need to highlight both lines and run them together with command return
-plot(sp1_Bonnethead, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_Bonnethead, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 11), ylim=c(1, 15))  
 lines(sp2_Bonnethead,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
 
@@ -1287,11 +1346,11 @@ names(Rarefaction_Blacktip_Stomach_Reverse)
 
 #Plot all samples together
 #Need to highlight both lines and run them together with command return
-sp1_Blacktip <- specaccum(Rarefaction_Blacktip_Fecal_Reverse, object="species", permutations = 100)
-sp2_Blacktip <- specaccum(Rarefaction_Blacktip_Stomach_Reverse, object="species", permutations = 100)
+sp1_Blacktip <- specaccum(Rarefaction_Blacktip_Fecal_Reverse, object="prey taxa", permutations = 100)
+sp2_Blacktip <- specaccum(Rarefaction_Blacktip_Stomach_Reverse, object="prey taxa", permutations = 100)
 
 #Need to highlight both lines and run them together with command return
-plot(sp1_Blacktip, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_Blacktip, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 5), ylim=c(1, 12))  
 lines(sp2_Blacktip,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
 
@@ -1333,11 +1392,11 @@ names(Rarefaction_Blacknose_Stomach_Reverse)
 
 #Plot all samples together
 #Need to highlight both lines and run them together with command return
-sp1_Blacknose <- specaccum(Rarefaction_Blacknose_Fecal_Reverse, object="species", permutations = 100)
-sp2_Blacknose <- specaccum(Rarefaction_Blacknose_Stomach_Reverse, object="species", permutations = 100)
+sp1_Blacknose <- specaccum(Rarefaction_Blacknose_Fecal_Reverse, object="prey taxa", permutations = 100)
+sp2_Blacknose <- specaccum(Rarefaction_Blacknose_Stomach_Reverse, object="prey taxa", permutations = 100)
 
 #Need to highlight both lines and run them together with command return
-plot(sp1_Blacknose, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_Blacknose, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 5), ylim=c(1, 12))  
 lines(sp2_Blacknose,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
 
@@ -1379,11 +1438,11 @@ names(Rarefaction_AtlanticSharpnose_Stomach_Reverse)
 
 #Plot all samples together
 #Need to highlight both lines and run them together with command return
-sp1_AtlanticSharpnose <- specaccum(Rarefaction_AtlanticSharpnose_Fecal_Reverse, object="species", permutations = 100)
-sp2_AtlanticSharpnose <- specaccum(Rarefaction_AtlanticSharpnose_Stomach_Reverse, object="species", permutations = 100)
+sp1_AtlanticSharpnose <- specaccum(Rarefaction_AtlanticSharpnose_Fecal_Reverse, object="prey taxa", permutations = 100)
+sp2_AtlanticSharpnose <- specaccum(Rarefaction_AtlanticSharpnose_Stomach_Reverse, object="prey taxa", permutations = 100)
 
 #Need to highlight both lines and run them together with command return
-plot(sp1_AtlanticSharpnose, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_AtlanticSharpnose, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 6), ylim=c(1, 12))  
 lines(sp2_AtlanticSharpnose,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
 
@@ -1393,16 +1452,16 @@ lines(sp2_AtlanticSharpnose,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, 
 #Need to highlight both lines and run them together with command return
 layout(matrix(c(1, 2, 3, 4), nrow = 2,
               ncol = 2, byrow = TRUE))
-plot(sp1_Bonnethead, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_Bonnethead, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 11), ylim=c(1, 15))  
 lines(sp2_Bonnethead,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
-plot(sp1_Blacktip, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_Blacktip, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 5), ylim=c(1, 12))  
 lines(sp2_Blacktip,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
-plot(sp1_Blacknose, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_Blacknose, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 5), ylim=c(1, 12))  
 lines(sp2_Blacknose,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
-plot(sp1_AtlanticSharpnose, ylab="Species", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
+plot(sp1_AtlanticSharpnose, ylab="Number of Prey Taxa", xlab="Number of samples",col="blue",ci.type="poly", ci.col="lightblue", ci.lty = 0,
      xlim=c(1, 6), ylim=c(1, 12))  
 lines(sp2_AtlanticSharpnose,col="darkgreen", ci.type="poly", ci.col=(rgb(0,1,0, alpha=0.3)), ci.lty = 0)
 ```
